@@ -1,5 +1,6 @@
 <<<<<<< HEAD
 2.2.7
+ * Allow nodetool info to run with readonly JMX access (CASSANDRA-11755)
  * RandomAccessReader: call isEOF() only when rebuffering, not for every read operation (CASSANDRA-12013)
  * Don't send erroneous NEW_NODE notifications on restart (CASSANDRA-11038)
  * StorageService shutdown hook should use a volatile variable (CASSANDRA-11984)
